--- a/_config.yml
+++ b/_config.yml
@@ -14,15 +14,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: elespdn.github.io
-email: your-email@domain.com
+email: elena.spadini@huygens.knaw.nl
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome descriptiON for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Website for ongoing talks, slides, courses and ongoing projects
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: spadinelena
+github_username:  elespdn
 
 # Build settings
 markdown: kramdown
