--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: elespdn.github.io
 email: elena.spadini@huygens.knaw.nl
 description: > # this means to ignore newlines until "baseurl:"
-  Website for ongoing talks, slides, courses and ongoing projects
+  Slides, talks, courses and ongoing projects
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: spadinelena
